# DCGeig

./: .gitignore  CMakeLists.txt  LICENSE.txt  MPL2.0  README
benchmarks/: 20160718.out  20160719.1083.out  20160719.17bc.out  20160719.out  20160722.06a2.out  20160723.ec0d.out  20160724.1e13.out  20160724.6885.out  20160726.a3b2.out  20160727.3dce.out  20160728.d53f.out  20161027.0bf8.out  20161123.f6cd.out  20161126.b879.out  20161127.fae9.out  20161130.7776.out  base.out  bcsstk25.20160724.7432.err  bmw7st_1.20161027.0bf8.err  bmw7st_1.20161123.f6cd.err  bmwcra_1.20161126.b879.err  bmwcra_1.20161127.fae9.err  bmwcra_1.20161130.7776.err  oilpan.20160718.err  oilpan.20160719.1083.err  oilpan.20160719.17bc.err  oilpan.20160719.err  oilpan.20160722.06a2.err  oilpan.20160724.6885.err  oilpan.base.err  problems.txt  pwtk.20160724.6885.err  pwtk.20160726.a3b2.err  pwtk.20160727.3dce.err  pwtk.20160728.d53f.err  pwtk.20161123.f6cd.err  s3dkq4m2.20160726.a3b2.err  s3dkq4m2.20161027.0bf8.err  s3dkq4m2.base.err  ship_003.20161027.0bf8.err  (+2 more)
bugs/: bug1.txt
cmake-modules/: FindMetis.cmake
cmake/Modules/: FindLinAlg.cmake  FindMKL.cmake  FindMetis.cmake  FindOpenBLAS.cmake
doc/: .gitignore  Makefile  biber.conf  biblatex.cfg  computing-with-chebychev-polynomials.tex  polynomial-filtering.tex  references.bib
doc/figures/: Makefile  chebyshev-vs-jackson-degree50.data  chebyshev-vs-jackson.tex  font.txt  minmax-vs-heaviside.data  minmax-vs-heaviside.tex
experiment/: eigenvalue_vs_eigenpair.py  make_minmax_vs_heaviside_data.py  plot_chebyshev_vs_jackson.py  plot_inverse_iteration_polynomials.py  print_forward_error.sh  superLU_vs_DS.py  superLU_vs_DS.sh
include/: CMakeLists.txt  blas.hpp  config.h.in  ggsvdcs.hpp  hpsd_gep_solvers.h  hpsd_gep_solvers.hpp  lapack.hpp  matrix.hpp  use.hpp
python/: CMakeLists.txt  count-eigenvalues  find_bugs_with_dso.py  metis.pyx  multilevel-gep-solver  solve-gep  solve-sparse-gep  solvers.pyx
python/dcgeig/: CMakeLists.txt  __init__.py.in  binary_tree.py  direct_substructuring.py  error_analysis.py  gallery.py  linalg.py  multilevel_solver.py  multilevel_tools.py  options.py  polynomial.py  solver.py  sparse_tools.py  stats.py  subspace_iteration.py  utils.py
python/dcgeig/tests/: CMakeLists.txt  __init__.py  test_binary_tree.py  test_direct_substructuring.py  test_error_analysis.py  test_gallery.py  test_linalg.py  test_metis.py  test_multilevel_solver.py  test_multilevel_tools.py  test_polynomial.py  test_solver.py  test_solvers.py  test_sparse_tools.py  test_subspace_iteration.py  test_utils.py
src/: CMakeLists.txt  deflate_gep.cpp  ggsvdcs.cpp  solve_gep_with_deflation.cpp  solve_gep_with_gsvd.cpp  solve_gep_with_qr_csd.cpp
tests/: CMakeLists.txt  main.cpp  test_gep_solvers.cpp
